Fix alignment of radio button and label

--- a/wiki/src/donate.css
+++ b/wiki/src/donate.css
@@ -122,7 +122,6 @@
 
 #frequency-buttons input {
   position: relative;
-  top: 2px;
   margin-right: 6px;
 }
 
